--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,9 +70,15 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[MRU]
+MRUItem0=/Game/TopDownBP/Cornelius/CorneliusLevel
+
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/TopDownBP/Cornelius/CorneliusLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+
+[ContentBrowserRecent]
+MRUItem0=/Game/TopDownBP/Cornelius/CorneliusLevel
 
