--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,8 +71,146 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Jocke/Jocke
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Jocke/WindParticle/Wind_mat.Wind_mat
+
+[MRU]
+MRUItem0=/Game/Jocke/Jocke
+
+[ContentBrowser]
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
+
+[MessageLog]
+LastLogListing=LoadErrors
+
+[ContentBrowserRecent]
+MRUItem0=/Game/Jocke/WindParticle/Wind_particle
+MRUItem1=/Game/Jocke/WindParticle/Wind_mat
+
+[DetailCategories]
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionParticleColor.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleModuleSpawn.Spawn=True
+ParticleModuleSpawn.Burst=True
+ParticleModuleSpawn.Cascade=True
+ParticleModuleVelocity.Velocity=True
+ParticleModuleVelocity.Cascade=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
+ParticleModuleTrailSource.Source=True
+ParticleModuleTrailSource.Cascade=True
+ParticleModuleLifetime.Lifetime=True
+ParticleModuleLifetime.Cascade=True
+ParticleModuleSpawnPerUnit.Spawn=True
+ParticleModuleSpawnPerUnit.Burst=True
+ParticleModuleSpawnPerUnit.Cascade=True
+ParticleModuleTypeDataRibbon.Trail=True
+ParticleModuleTypeDataRibbon.Spawn=True
+ParticleModuleTypeDataRibbon.Rendering=True
+ParticleModuleTypeDataRibbon.Cascade=True
+ParticleModuleRequired.Emitter=True
+ParticleModuleRequired.Duration=True
+ParticleModuleRequired.Delay=True
+ParticleModuleRequired.SubUV=True
+ParticleModuleRequired.MacroUV=True
+ParticleModuleRequired.Rendering=True
+ParticleModuleRequired.ParticleCutout=True
+ParticleModuleRequired.Normals=True
+ParticleModuleRequired.Materials=True
+ParticleModuleSize.Size=True
+ParticleModuleSize.Cascade=True
+ParticleModuleVelocityOverLifetime.Velocity=True
+ParticleModuleVelocityOverLifetime.Cascade=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.Lighting=True
+Emitter.Rendering=True
+Emitter.LOD=True
+Emitter.Navigation=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Replication=True
+Emitter.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+ParticleModuleLocationPrimitiveSphere.Location=True
+ParticleModuleLocationPrimitiveSphere.Cascade=True
+ParticleModuleColorOverLife.Color=True
+ParticleModuleColorOverLife.Cascade=True
+
+[DetailPropertyExpansion]
+ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
+ParticleModule="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+Object="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleVelocity="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleTrailSource="\"Object.Source.SourceStrength.Distribution\" "
+ParticleModuleTrailBase="\"Object.Source.SourceStrength.Distribution\" "
+ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleSpawnPerUnit="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
+ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModuleVelocityOverLifetime="\"Object.Velocity.VelOverLife\" \"Object.Velocity.VelOverLife.Distribution\" \"Object.Velocity.VelOverLife.Distribution.Object.ConstantCurve\" \"Object.Velocity.VelOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Velocity.VelOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Velocity.VelOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" \"Object.Velocity.VelOverLife.Distribution.Object.ConstantCurve.Points.Points[2]\" \"Object.Velocity.VelOverLife.Distribution.Object.ConstantCurve.Points.Points[3]\" "
+ParticleModuleLocationPrimitiveSphere="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
+ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
+ParticleModuleLocationBase="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
+ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+
+[PlacementMode]
+RecentlyPlaced=/Game/Jocke/WindParticle/Wind_particle.Wind_particle;
 
