wind particle done

--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,6 +75,8 @@ LastLevel=/Game/Jocke/Jocke
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Jocke/WindParticle/Wind_mat.Wind_mat
+OpenAssetsAtExit=/Game/Jocke/WindParticle/Wind_mat_Inst.Wind_mat_Inst
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -157,7 +159,7 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
-MaterialInstanceConstant=
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Jocke/WindParticle
@@ -189,10 +191,10 @@ ContentBrowserTab1.CurrentViewType=1
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Jocke/Jocke
-MRUItem1=/Game/Jocke/WindParticle/Wind_mat_Inst
-MRUItem2=/Game/Jocke/WindParticle/Wind_particle
-MRUItem3=/Game/Jocke/WindParticle/Wind_mat
+MRUItem0=/Game/Jocke/WindParticle/Wind_mat_Inst
+MRUItem1=/Game/Jocke/WindParticle/Wind_mat
+MRUItem2=/Game/Jocke/Jocke
+MRUItem3=/Game/Jocke/WindParticle/Wind_particle
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -337,6 +339,19 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Replication=True
+SphereReflectionCapture.Input=True
 
 [DetailPropertyExpansion]
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
