--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,12 +71,12 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/Jocke/Jocke
+LastLevel=/Game/Jocke/Display_map
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Jocke/WindParticle/Wind_mat.Wind_mat
-OpenAssetsAtExit=/Game/Jocke/WindParticle/Wind_mat_Inst.Wind_mat_Inst
+OpenAssetsAtExit=/Game/Jocke/Water/ToonWater_Inst.ToonWater_Inst
+OpenAssetsAtExit=/Game/Jocke/Water/ToonWater.ToonWater
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -120,7 +120,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Jocke/Jocke
+MRUItem0=/Game/Jocke/Display_map
+MRUItem1=/Game/Jocke/Jocke
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
@@ -158,8 +159,8 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [DetailCustomWidgetExpansion]
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Water Color,MaterialEditorInstanceConstant.ParameterGroups.Caustic,MaterialEditorInstanceConstant.ParameterGroups.Normals,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Water Color,MaterialEditorInstanceConstant.ParameterGroups.Caustic,MaterialEditorInstanceConstant.ParameterGroups.Normals,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Jocke/WindParticle
@@ -191,10 +192,14 @@ ContentBrowserTab1.CurrentViewType=1
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Jocke/WindParticle/Wind_mat_Inst
-MRUItem1=/Game/Jocke/WindParticle/Wind_mat
-MRUItem2=/Game/Jocke/Jocke
-MRUItem3=/Game/Jocke/WindParticle/Wind_particle
+MRUItem0=/Game/Jocke/BasicMaterials/BaseGray_mat
+MRUItem1=/Game/Jocke/BasicMaterials/BaseMaterial_mat
+MRUItem2=/Game/Jocke/Water/ToonWater_Inst
+MRUItem3=/Game/Jocke/Water/ToonWater
+MRUItem4=/Game/Jocke/WindParticle/Wind_mat_Inst
+MRUItem5=/Game/Jocke/WindParticle/Wind_mat
+MRUItem6=/Game/Jocke/Jocke
+MRUItem7=/Game/Jocke/WindParticle/Wind_particle
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -352,6 +357,45 @@ SphereReflectionCapture.Tags=True
 SphereReflectionCapture.Cooking=True
 SphereReflectionCapture.Replication=True
 SphereReflectionCapture.Input=True
+MaterialExpressionSceneColor.MaterialExpressionSceneColor=True
+MaterialExpressionSceneColor.MaterialExpression=True
+MaterialExpressionDepthFade.MaterialExpressionDepthFade=True
+MaterialExpressionDepthFade.MaterialExpression=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
+MaterialExpressionReroute.MaterialExpression=True
+MaterialExpressionParameter.General=True
+MaterialExpressionParameter.MaterialExpression=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionComment.MaterialExpressionComment=True
+MaterialExpressionComment.MaterialExpression=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
+MaterialExpressionAppendVector.MaterialExpression=True
+MaterialExpressionComponentMask.MaterialExpressionComponentMask=True
+MaterialExpressionComponentMask.MaterialExpression=True
+Actor.TransformCommon=True
+Actor.Replication=True
+Actor.Actor=True
+Brush.TransformCommon=True
+Brush.BrushSettings=True
+Brush.Replication=True
+Brush.Actor=True
+MaterialExpressionIf.MaterialExpressionIf=True
+MaterialExpressionIf.MaterialExpression=True
+MaterialExpressionFresnel.MaterialExpressionFresnel=True
+MaterialExpressionFresnel.MaterialExpression=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+Actor.Surface Materials=True
+Actor.Geometry=True
+Actor.Surface Properties=True
 
 [DetailPropertyExpansion]
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
@@ -373,8 +417,10 @@ ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius\" \"Object.Lo
 ParticleModuleLocationBase="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Jocke/WindParticle/Wind_particle.Wind_particle;
 
 [MaterialEditor]
@@ -438,7 +484,7 @@ bMaterialQualityUsed[2]=0
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
@@ -1282,4 +1328,10 @@ MovieSceneCapture.LastCompileMethod=Unknown
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[AssetEditorToolkitTabLocation]
+/Game/Jocke/WindParticle/Wind_mat.Wind_mat=0
+/Game/Jocke/WindParticle/Wind_mat_Inst.Wind_mat_Inst=0
+/Game/Jocke/BasicMaterials/BaseGray_mat.BaseGray_mat=0
+/Game/Jocke/BasicMaterials/BaseMaterial_mat.BaseMaterial_mat=0
 
