last push for today with this, study time.

--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,7 +74,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/Jocke/Display_map
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Jocke/Water/ToonWater_Inst.ToonWater_Inst
 OpenAssetsAtExit=/Game/Jocke/Water/ToonWater.ToonWater
 
@@ -160,10 +160,10 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Water Color,MaterialEditorInstanceConstant.ParameterGroups.Caustic,MaterialEditorInstanceConstant.ParameterGroups.Normals,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Water Color,MaterialEditorInstanceConstant.ParameterGroups.Caustic,MaterialEditorInstanceConstant.ParameterGroups.Normals,
+MaterialInstanceConstant=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Jocke/WindParticle
+ContentBrowserTab1.SelectedPaths=/Game/Jocke/BasicMaterials
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -484,7 +484,7 @@ bMaterialQualityUsed[2]=0
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
