--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,6 +75,14 @@ LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/JensStuff/MatingEffect.MatingEffect
+OpenAssetsAtExit=/Game/JensStuff/HeartMat.HeartMat
+
+[ContentBrowser]
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -86,8 +94,68 @@ PlayerStart.Rendering=True
 PlayerStart.Replication=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionReroute.MaterialExpression=True
+NiagaraActor.TransformCommon=True
+NiagaraActor.Materials=True
+NiagaraActor.NiagaraComponent_Parameters=True
+NiagaraActor.Niagara=True
+NiagaraActor.Parameters=True
+NiagaraActor.Attachment=True
+NiagaraActor.Compilation=True
+NiagaraActor.Lighting=True
+NiagaraActor.Rendering=True
+NiagaraActor.Navigation=True
+NiagaraActor.Tags=True
+NiagaraActor.Activation=True
+NiagaraActor.Cooking=True
+NiagaraActor.Replication=True
+NiagaraActor.Actor=True
+HeartSpawnerExample_C.Tick=True
+HeartSpawnerExample_C.Replication=True
+HeartSpawnerExample_C.Rendering=True
+HeartSpawnerExample_C.Collision=True
+HeartSpawnerExample_C.Actor=True
+HeartSpawnerExample_C.Input=True
+NiagaraComponent.Variable=True
+NiagaraComponent.TransformCommon=True
+NiagaraComponent.Sockets=True
+NiagaraComponent.NiagaraComponent_Parameters=True
+NiagaraComponent.Niagara=True
+NiagaraComponent.Parameters=True
+NiagaraComponent.Attachment=True
+NiagaraComponent.Compilation=True
+NiagaraComponent.Lighting=True
+NiagaraComponent.Rendering=True
+NiagaraComponent.Navigation=True
+NiagaraComponent.Tags=True
+NiagaraComponent.ComponentReplication=True
+NiagaraComponent.Activation=True
+NiagaraComponent.Cooking=True
+NiagaraComponent.Events=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/JensStuff/HeartMat
-MRUItem1=/Game/JensStuff/MatingEffect
+MRUItem0=/Game/JensStuff/HeartSpawnerExample
+MRUItem1=/Game/JensStuff/HeartMat
+MRUItem2=/Game/JensStuff/MatingEffect
+
+[PlacementMode]
+RecentlyPlaced=/Game/JensStuff/MatingEffect_System.MatingEffect_System;
 
