--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,7 +76,34 @@ LastLevel=/Engine/Maps/Templates/Template_Default
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/JensStuff/MatingEffect.MatingEffect
-OpenAssetsAtExit=/Game/JensStuff/HeartMat.HeartMat
+OpenAssetsAtExit=/Game/JensStuff/HeartSpawnerExample.HeartSpawnerExample
+OpenAssetsAtExit=/Game/JensStuff/Selection/SelectionCircle.SelectionCircle
+OpenAssetsAtExit=/Game/JensStuff/Selection/SelectionCircle_Inst.SelectionCircle_Inst
+
+[MRU]
+MRUItem0=/Game/JensStuff/JensTestLevel
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=True
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[DetailCustomWidgetExpansion]
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -150,12 +177,264 @@ NiagaraComponent.ComponentReplication=True
 NiagaraComponent.Activation=True
 NiagaraComponent.Cooking=True
 NiagaraComponent.Events=True
+AnimalInformation_C.Tick=True
+AnimalInformation_C.Replication=True
+AnimalInformation_C.Rendering=True
+AnimalInformation_C.Collision=True
+AnimalInformation_C.Actor=True
+AnimalInformation_C.Input=True
+MaterialBillboardComponent.Variable=True
+MaterialBillboardComponent.TransformCommon=True
+MaterialBillboardComponent.Sockets=True
+MaterialBillboardComponent.Sprite=True
+MaterialBillboardComponent.Rendering=True
+MaterialBillboardComponent.Navigation=True
+MaterialBillboardComponent.Tags=True
+MaterialBillboardComponent.ComponentReplication=True
+MaterialBillboardComponent.Cooking=True
+MaterialBillboardComponent.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+ListView.Layout=True
+ListView.ListView=True
+ListView.Accessibility=True
+ListView.Scrolling=True
+ListView.Behavior=True
+ListView.ListEntries=True
+ListView.Render Transform=True
+ListView.Performance=True
+ListView.Clipping=True
+ListView.Navigation=True
+ListView.Localization=True
+ListView.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionFunctionOutput.MaterialExpressionFunctionOutput=True
+MaterialExpressionFunctionOutput.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionSubtract.MaterialExpressionSubtract=True
+MaterialExpressionSubtract.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionClamp.MaterialExpressionClamp=True
+MaterialExpressionClamp.MaterialExpression=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialFunction.MaterialFunction=True
+MaterialFunction.Thumbnail=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionPower.MaterialExpressionPower=True
+MaterialExpressionPower.MaterialExpression=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+Example_C.Tick=True
+Example_C.Replication=True
+Example_C.Rendering=True
+Example_C.Collision=True
+Example_C.Actor=True
+Example_C.Input=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+Example_C.TransformCommon=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/JensStuff/HeartSpawnerExample
-MRUItem1=/Game/JensStuff/HeartMat
-MRUItem2=/Game/JensStuff/MatingEffect
+MRUItem0=/Game/JensStuff/Selection/Example
+MRUItem1=/Game/JensStuff/Selection/SelectionCircle_Inst
+MRUItem2=/Engine/Functions/Engine_MaterialFunctions01/Gradient/RadialGradientExponential
+MRUItem3=/Game/JensStuff/Selection/SelectionCircle
+MRUItem4=/Game/JensStuff/AnimalInfoUI
+MRUItem5=/Game/JensStuff/AnimalInformation
+MRUItem6=/Game/JensStuff/HeartSpawnerExample
+MRUItem7=/Game/JensStuff/HeartMat
+MRUItem8=/Game/JensStuff/MatingEffect
 
 [PlacementMode]
+RecentlyPlaced=/Game/JensStuff/Selection/Example.Example;
 RecentlyPlaced=/Game/JensStuff/MatingEffect_System.MatingEffect_System;
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bDeleteKeysWhenTrimming=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
+
+[/Script/UnrealEd.BlueprintEditorOptions]
+bHideUnrelatedNodes=False
+
+[AssetEditorToolkitTabLocation]
+/Engine/Functions/Engine_MaterialFunctions01/Gradient/RadialGradientExponential.RadialGradientExponential=0
+/Game/JensStuff/HeartMat.HeartMat=0
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
