--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,7 +69,7 @@ LastExecutedLaunchName=PC24
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_Simulate
+MultipleInstancePositions=(X=320,Y=160)
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/MapGen
@@ -79,6 +79,11 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/CounterWidght.CounterWidght
 OpenAssetsAtExit=/Game/MyAiController.MyAiController
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Gen.Gen
+OpenAssetsAtExit=/Game/MyAi.MyAi
+OpenAssetsAtExit=/Game/LockAtCam.LockAtCam
+OpenAssetsAtExit=/Game/HUDClass.HUDClass
+OpenAssetsAtExit=/Game/MyBT.MyBT
+OpenAssetsAtExit=/Game/MyBB.MyBB
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -130,7 +135,7 @@ MRUItem2=/Game/TopDownBP/Maps/GameGen
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,BoxComponent.Collision.Collision,
 MapGen_C=
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,BoxComponent.Collision.Collision,
-Gen_C=
+Gen_C=K2Node_VariableGet.DefaultValueCategory.None,BoxComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,BoxComponent.Collision.Collision,
 MyAiController_C=
@@ -138,6 +143,8 @@ PawnActionsComponent=K2Node_VariableGet.DefaultValueCategory.None,BoxComponent.C
 FindRandomPosition_C=K2Node_VariableGet.DefaultValueCategory.None,BoxComponent.Collision.Collision,
 FindRandomLocation_C=
 MyAi_C=
+LockAtCam_C=K2Node_VariableGet.DefaultValueCategory.None,BoxComponent.Collision.Collision,
+CounterWidght_C=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
@@ -169,17 +176,19 @@ ContentBrowserTab1.CurrentViewType=1
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/Gen
-MRUItem1=/Game/MyAiController
-MRUItem2=/Game/CounterWidght
-MRUItem3=/Game/TopDownBP/Maps/MapGen
-MRUItem4=/Game/Counter
-MRUItem5=/Game/TopDownBP/Blueprints/MapGen
-MRUItem6=/Game/BTTask_BlueprintBase_New
-MRUItem7=/Game/MyBT
-MRUItem8=/Game/MyAi
-MRUItem9=/Game/TopDownBP/Blueprints/Food
-MRUItem10=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/MyBT
+MRUItem1=/Game/Counter
+MRUItem2=/Game/HUDClass
+MRUItem3=/Game/LockAtCam
+MRUItem4=/Game/MyAi
+MRUItem5=/Game/TopDownBP/Blueprints/Gen
+MRUItem6=/Game/MyAiController
+MRUItem7=/Game/CounterWidght
+MRUItem8=/Game/TopDownBP/Maps/MapGen
+MRUItem9=/Game/TopDownBP/Blueprints/MapGen
+MRUItem10=/Game/BTTask_BlueprintBase_New
+MRUItem11=/Game/TopDownBP/Blueprints/Food
+MRUItem12=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [DetailCategories]
 MapGen_C.Tick=True
@@ -493,15 +502,129 @@ K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
 MyAi_C.Default=True
 MyAiController_C.Default=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+RecastNavMesh.TransformCommon=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Collision=True
+LockAtCam_C.Tick=True
+LockAtCam_C.AutoPlayerActivation=True
+LockAtCam_C.Replication=True
+LockAtCam_C.Collision=True
+LockAtCam_C.Actor=True
+K2Node_VariableSet.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.CameraOptions=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Camera=True
+CameraActor.PostProcess=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Collision=True
+CameraActor.Cooking=True
+CameraActor.Replication=True
+CameraActor.Actor=True
+CounterWidght_C.Appearance=True
+CounterWidght_C.Designer=True
+CounterWidght_C.Input=True
+CounterWidght_C.Interaction=True
+CounterWidght_C.Performance=True
+CounterWidght_C.Layout=True
+CounterWidght_C.Behavior=True
+CounterWidght_C.Render Transform=True
+CounterWidght_C.Accessibility=True
+CounterWidght_C.Clipping=True
+CounterWidght_C.Navigation=True
+CounterWidght_C.Localization=True
+WidgetBlueprint.ClassOptions=True
+WidgetBlueprint.Interfaces=True
+WidgetBlueprint.BlueprintOptions=True
+WidgetBlueprint.Packaging=True
+HUDClass_C.Tick=True
+HUDClass_C.HUD=True
+HUDClass_C.Collision=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.Tick=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+CounterWidght_C.Default=True
+BTTask_RotateToFaceBBEntry.Node=True
+BTTask_RotateToFaceBBEntry.Blackboard=True
+BTTask_RotateToFaceBBEntry.Task=True
+BTTask_RotateToFaceBBEntry.Description=True
 
 [DetailPropertyExpansion]
-MapGen_C="\"Object.Default.Seed\" \"Object.Default.Mesh\" "
-Gen_C=
+MapGen_C=
+Gen_C="\"Object.Amount\" \"Object.Amount\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0]\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0]\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
-Object="\"Object.AI.AI|BehaviorTree\" "
+Object=
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
-ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+ActorComponent=
 MyAiController_C=
 AIController=
 Controller=
@@ -517,9 +640,15 @@ FindRandomLocation_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-MyAi_C="\"Object.LifeTime\" \"Object.LifeTime\" "
-Character="\"Object.LifeTime\" \"Object.LifeTime\" "
-Pawn="\"Object.LifeTime\" \"Object.LifeTime\" "
+MyAi_C=
+Character=
+Pawn=
+LockAtCam_C="\"Object.TargetActor\" \"Object.TargetActor\" "
+CameraActor=
+CounterWidght_C="\"Object.Amount\" \"Object.Amount\" "
+UserWidget="\"Object.Amount\" \"Object.Amount\" "
+Widget=
+Visual=
 
 [PlacementMode]
 RecentlyPlaced=/Game/MyAi.MyAi;
@@ -532,6 +661,7 @@ RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.Ac
 /Game/FindRandomLocation.FindRandomLocation=0
 /Game/Counter.Counter=0
 /Game/TopDownBP/Blueprints/Gen.Gen=0
+/Game/TopDownBP/Maps/MapGen.MapGen:PersistentLevel.MapGen=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
