Random genartion, movements

--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,14 +76,6 @@ LastLevel=/Game/TopDownBP/Maps/MapGen
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/CounterWidght.CounterWidght
-OpenAssetsAtExit=/Game/MyAiController.MyAiController
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/Gen.Gen
-OpenAssetsAtExit=/Game/MyAi.MyAi
-OpenAssetsAtExit=/Game/LockAtCam.LockAtCam
-OpenAssetsAtExit=/Game/HUDClass.HUDClass
-OpenAssetsAtExit=/Game/MyBT.MyBT
-OpenAssetsAtExit=/Game/MyBB.MyBB
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -145,9 +137,10 @@ FindRandomLocation_C=
 MyAi_C=
 LockAtCam_C=K2Node_VariableGet.DefaultValueCategory.None,BoxComponent.Collision.Collision,
 CounterWidght_C=
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -176,15 +169,15 @@ ContentBrowserTab1.CurrentViewType=1
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyBT
-MRUItem1=/Game/Counter
-MRUItem2=/Game/HUDClass
-MRUItem3=/Game/LockAtCam
-MRUItem4=/Game/MyAi
-MRUItem5=/Game/TopDownBP/Blueprints/Gen
-MRUItem6=/Game/MyAiController
-MRUItem7=/Game/CounterWidght
-MRUItem8=/Game/TopDownBP/Maps/MapGen
+MRUItem0=/Game/TopDownBP/Maps/MapGen
+MRUItem1=/Game/MyBT
+MRUItem2=/Game/Counter
+MRUItem3=/Game/HUDClass
+MRUItem4=/Game/LockAtCam
+MRUItem5=/Game/MyAi
+MRUItem6=/Game/TopDownBP/Blueprints/Gen
+MRUItem7=/Game/MyAiController
+MRUItem8=/Game/CounterWidght
 MRUItem9=/Game/TopDownBP/Blueprints/MapGen
 MRUItem10=/Game/BTTask_BlueprintBase_New
 MRUItem11=/Game/TopDownBP/Blueprints/Food
@@ -616,6 +609,29 @@ BTTask_RotateToFaceBBEntry.Node=True
 BTTask_RotateToFaceBBEntry.Blackboard=True
 BTTask_RotateToFaceBBEntry.Task=True
 BTTask_RotateToFaceBBEntry.Description=True
+Slider.Layout=True
+Slider.Appearance=True
+Slider.Style=True
+Slider.Accessibility=True
+Slider.Interaction=True
+Slider.Behavior=True
+Slider.Render Transform=True
+Slider.Performance=True
+Slider.Clipping=True
+Slider.Navigation=True
+Slider.Localization=True
+Slider.Events=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
 
 [DetailPropertyExpansion]
 MapGen_C=
@@ -645,8 +661,8 @@ Character=
 Pawn=
 LockAtCam_C="\"Object.TargetActor\" \"Object.TargetActor\" "
 CameraActor=
-CounterWidght_C="\"Object.Amount\" \"Object.Amount\" "
-UserWidget="\"Object.Amount\" \"Object.Amount\" "
+CounterWidght_C=
+UserWidget=
 Widget=
 Visual=
 
@@ -662,6 +678,8 @@ RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.Ac
 /Game/Counter.Counter=0
 /Game/TopDownBP/Blueprints/Gen.Gen=0
 /Game/TopDownBP/Maps/MapGen.MapGen:PersistentLevel.MapGen=0
+/Game/MyBT.MyBT=1
+/Game/MyBB.MyBB=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
